[workspace]
members = ["crates/cli", "crates/lib"]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
authors = ["Jacob Heider <jhheider@gmail.com>"]
description = "A rust CLI/library for interacting with teaxyz/gpg-wallet"
edition = "2024"
repository = "https://github.com/jhheider/tea-gpg-wallet"
keywords = ["cryptocurrency", "gpg", "blockchain", "tea"]
license = "MIT"
rust-version = "1.89"

[workspace.dependencies]
alloy = "2.0.0"
anyhow = "1.0.100"
lazy_static = "1.5.0"
tokio = "1.47.1"
