[workspace]
members = ["crates/cli", "crates/lib"]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
authors = ["Jacob Heider <jhheider@gmail.com>"]
description = "A rust CLI/library for interacting with teaxyz/gpg-wallet"
edition = "2024"
repository = "https://github.com/jhheider/tea-gpg-wallet"
keywords = ["cryptocurrency", "gpg", "blockchain", "tea"]
license = "MIT"
rust-version = "1.89"

[workspace.dependencies]
# Drop alloy's default reqwest-rustls-tls (aws-lc-rs C build). We own the
# shared reqwest with rustls-no-provider + ring instead (house TLS stack).
alloy = { version = "2", default-features = false, features = [
    "std",
    "essentials",
    "reqwest",
] }
anyhow = "1.0.100"
lazy_static = "1.5.0"
tokio = "1.52.1"
# rustls + ring only; keep `cargo tree -i aws-lc-sys` / `-i openssl-sys` empty.
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-no-provider",
    "system-proxy",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
