[package]
name = "tea-gpg-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
libtea-gpg-wallet = { path = "../lib" }
alloy = "1.0.24"
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5.0"
regex = "1.11.1"
# pkgx fork; includes macOS secure enclave support.
# use it directly eventually; for now, use Command
# pbp = { git = "https://github.com/pkgxdev/bpb", features = ["dalek"] }
