[package]
name = "tea-gpg-wallet"
version = "0.2.0"
edition = "2024"

[dependencies]
libtea-gpg-wallet = { path = "../lib" }
alloy = "1.0.24"
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5.0"
regex = "1.11.1"
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["cargo"] }
colored = "3.0.0"
indicatif = "0.18.0"
# pkgx fork; includes macOS secure enclave support.
# use it directly eventually; for now, use Command
# pbp = { git = "https://github.com/pkgxdev/bpb", features = ["dalek"] }
