[package]
name = "libtea-gpg-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-contract = "1.0.24"
alloy-sol-types = "1.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
alloy = "1.0.24"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = "0.12.23"
