[package]
name = "libtea-gpg-wallet"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy-contract = "1.0.25"
alloy-sol-types = "1.3.1"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
alloy = "1.0.25"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = "0.12.23"
anyhow = "1.0.99"
