[package]
name = "tea-gpg-wallet"
version = "0.2.0"
edition = "2024"

[dependencies]
libtea-gpg-wallet = { path = "../lib" }
alloy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
lazy_static = { workspace = true }
regex = "1.11.2"
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["cargo"] }
colored = "3.0.0"
indicatif = "0.18.0"
# pkgx fork; includes macOS secure enclave support.
# use it directly eventually; for now, use Command
# pbp = { git = "https://github.com/pkgxdev/bpb", features = ["dalek"] }
