[package]
name = "libtea-gpg-wallet"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy-contract = "2.0.0"
alloy-sol-types = "1.3.1"
lazy_static = { workspace = true }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
alloy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = "0.12.23"
anyhow = { workspace = true }
